Fix Paypal "Buy now" button getting chopped off on small screens

--- a/assets/less/trialflights.less
+++ b/assets/less/trialflights.less
@@ -12,5 +12,21 @@
       margin-bottom: 0.75em;
       margin-top: 0.5em;
     }
+
+    .payment {
+      display: table-cell;
+      height: 6em;
+      vertical-align: middle;
+      text-align: center;
+
+      select {
+        display: inline-block;
+        margin: 1em;
+      }
+      input {
+        margin: 1em;
+        vertical-align: middle;
+      }
+    }
   }
 }
